# triage-bakeoff

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
config/: models.yaml
data/: golden_set.jsonl  rubric.md
docs/: README.md  decisions.md
docs/phases/: phase-0-repo-and-scaffold.md  phase-1-contracts-and-config.md  phase-2-golden-set.md
prompts/: classify.txt
scripts/: check_golden_set.py
src/: schema.py
